Mark aya-tool publish=false
This is for internal use, get it off the API treadmill.

--- a/aya-tool/Cargo.toml
+++ b/aya-tool/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "aya-tool"
 version = "0.1.0"
+publish = false
 description = "A tool for generating bindings for Linux Kernel types"
 authors.workspace = true
 license.workspace = true
