fix: fix rustdocs-args ordering in taplo to -D warnings
This fixes the current rustdoc build error by correcting the ordering of
`rustdoc-args` to `-D warnings`. Additionally, this also removes the
`recorder_arrays` field (defaults to false) so that the order is not
modified, which is what caused the error in the first place.

--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -35,4 +35,4 @@ async_std = ["dep:async-io"]
 
 [package.metadata.docs.rs]
 all-features = true
-rustdoc-args = ["--cfg", "-D", "docsrs", "warnings"]
+rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]
