--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,9 +239,9 @@ jobs:
           | grep -q ^/Library/Frameworks/Python.framework/Versions/' _ {} \; -exec rm -v {} \;
           HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 \
           brew install dpkg findutils gnu-tar llvm pkg-config qemu
-          echo /usr/local/opt/findutils/libexec/gnubin >> $GITHUB_PATH
-          echo /usr/local/opt/gnu-tar/libexec/gnubin >> $GITHUB_PATH
-          echo /usr/local/opt/llvm/bin >> $GITHUB_PATH
+          echo $(brew --prefix)/opt/findutils/libexec/gnubin >> $GITHUB_PATH
+          echo $(brew --prefix)/opt/gnu-tar/libexec/gnubin >> $GITHUB_PATH
+          echo $(brew --prefix)/opt/llvm/bin >> $GITHUB_PATH
 
       - name: bpf-linker
         if: runner.os == 'macOS'
