aya: convert bpf programs to assembly
In aya/src/sys/bpf.rs, there are several simple bpf programs written as
byte arrays. Rework these as assembly code and then generate the
bytecode.

Signed-off-by: Billy McFall <22157057+Billy99@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
             --exclude aya-log-ebpf \
             --exclude integration-ebpf \
             --exclude integration-test \
-            --workspace
+            --workspace -- --nocapture
 
       - name: Doctests
         env:
