add basic tcx integration tests
Add basic tcx integration tests to ensure the new
Mprog API is working as expected.

Signed-off-by: astoycos <astoycos@gmail.com>

--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -27,6 +27,7 @@ test-case = { workspace = true }
 test-log = { workspace = true, features = ["log"] }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 xdpilone = { workspace = true }
+chrono = { workspace = true }
 
 [build-dependencies]
 cargo_metadata = { workspace = true }
