ci: pin rust to nightly-2024-09-09 until public-api fixed
The public-api (cargo xtask public-api) is failing with the latest rust
nightly package. Temporarily pin nightly to last known working version
until the issue can be resolved.

Signed-off-by: Billy McFall <22157057+Billy99@users.noreply.github.com>

--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: nightly
+          toolchain: nightly-2024-09-09
           components: rustfmt, clippy
 
       - uses: Swatinem/rust-cache@v2
