--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: nightly
+          toolchain: nightly-2024-09-09
           components: rustfmt, clippy, miri, rust-src
 
       - uses: Swatinem/rust-cache@v2
@@ -55,7 +55,7 @@ jobs:
       - name: Run miri
         run: |
           set -euxo pipefail
-          cargo hack miri test --all-targets --feature-powerset \
+          cargo +nightly-2024-09-09 hack miri test --all-targets --feature-powerset \
             --exclude aya-ebpf \
             --exclude aya-ebpf-bindings \
             --exclude aya-log-ebpf \
@@ -149,7 +149,7 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: nightly
+          toolchain: nightly-2024-09-09
           components: rust-src
 
       - uses: Swatinem/rust-cache@v2
@@ -243,7 +243,7 @@ jobs:
 
       - uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: nightly
+          toolchain: nightly-2024-09-09
           components: rust-src
           targets: aarch64-unknown-linux-musl,x86_64-unknown-linux-musl
 
