--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
 publish = "site"
-command = "rustup toolchain install nightly -c rust-src && cargo xtask docs"
+command = "rustup toolchain install nightly-2024-09-09 -c rust-src && cargo xtask docs"
