--- a/ebpf/aya-ebpf/Cargo.toml
+++ b/ebpf/aya-ebpf/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aya-ebpf"
-version = "0.1.0"
+version = "0.1.1"
 description = "A library for writing eBPF programs"
 authors.workspace = true
 license.workspace = true
@@ -9,9 +9,9 @@ homepage.workspace = true
 edition.workspace = true
 
 [dependencies]
-aya-ebpf-cty = { version = "0.2.1", path = "../aya-ebpf-cty" }
-aya-ebpf-macros = { version = "^0.1.0", path = "../../aya-ebpf-macros" }
-aya-ebpf-bindings = { version = "^0.1.0", path = "../aya-ebpf-bindings" }
+aya-ebpf-cty = { version = "^0.2.2", path = "../aya-ebpf-cty" }
+aya-ebpf-macros = { version = "^0.1.1", path = "../../aya-ebpf-macros" }
+aya-ebpf-bindings = { version = "^0.1.1", path = "../aya-ebpf-bindings" }
 const-assert = { workspace = true, optional = true }
 
 [build-dependencies]
