--- a/ebpf/aya-log-ebpf/Cargo.toml
+++ b/ebpf/aya-log-ebpf/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aya-log-ebpf"
-version = "0.1.0"
+version = "0.1.1"
 description = "Logging for eBPF programs"
 authors.workspace = true
 license.workspace = true
@@ -10,7 +10,7 @@ edition.workspace = true
 
 [dependencies]
 aya-ebpf = { version = "^0.1.1", path = "../aya-ebpf" }
-aya-log-common = { version = "0.1.14", path = "../../aya-log-common" }
+aya-log-common = { version = "^0.1.15", path = "../../aya-log-common" }
 aya-log-ebpf-macros = { version = "^0.1.0", path = "../../aya-log-ebpf-macros" }
 
 [lib]
