Remove workspace members from workspace.dependencies
Doesn't make much sense to have them here.

--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -43,4 +43,4 @@ cargo_metadata = { workspace = true }
 # workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
 # features.
 integration-ebpf = { path = "../integration-ebpf" }
-xtask = { workspace = true }
+xtask = { path = "../../xtask" }
