aya,aya-obj: cache feat probed info fields
Cached probed for ProgramInfo fields instead of exposing it through
global FEATURE. Probing occurs on cache miss, which happens when first
accessing the field, *and* if the field is 0.

--- a/aya/Cargo.toml
+++ b/aya/Cargo.toml
@@ -22,7 +22,7 @@ hashbrown = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
 object = { workspace = true, features = ["elf", "read_core", "std", "write"] }
-once_cell = { workspace = true }
+once_cell = { workspace = true, features = ["race"] }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["rt"], optional = true }
 
