--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo hack clippy --all-targets --feature-powerset --workspace -- --deny warnings
+        run: ./clippy.sh
 
       - run: cargo xtask public-api
         if: github.event_name == 'pull_request'
@@ -165,10 +165,12 @@ jobs:
           CARGO_CFG_BPF_TARGET_ARCH: ${{ matrix.bpf_target_arch }}
         run: |
           set -euxo pipefail
-          cargo hack build --package aya-ebpf --package aya-log-ebpf \
-            --feature-powerset \
+          cargo hack build \
             --target ${{ matrix.target }} \
-            -Z build-std=core
+            -Z build-std=core \
+            --package aya-ebpf \
+            --package aya-log-ebpf \
+            --feature-powerset
 
       - name: Test
         env:
@@ -176,7 +178,8 @@ jobs:
           RUST_BACKTRACE: full
         run: |
           set -euxo pipefail
-          cargo hack test --doc \
+          cargo hack test \
+            --doc \
             --package aya-ebpf \
             --package aya-log-ebpf \
             --feature-powerset
