--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,8 +81,8 @@ nix = { version = "0.29.0", default-features = false }
 num_enum = { version = "0.7", default-features = false }
 object = { version = "0.36", default-features = false }
 once_cell = { version = "1.20.1", default-features = false }
-proc-macro-error = { version = "1.0", default-features = false }
 proc-macro2 = { version = "1", default-features = false }
+proc-macro2-diagnostics = { version = "0.10.1", default-features = false }
 public-api = { version = "0.42.0", default-features = false }
 quote = { version = "1", default-features = false }
 rand = { version = "0.8", default-features = false }
