feat(aya-ebpf): BTF maps
Before this change, Aya supported only legacy BPF map definitions, which
are instances of the `bpf_map_def` struct and end up in the `maps` ELF
section. This change introduces BTF maps, with custom structs indicating
the metadata of the map, which end up in the `.maps` section.

Legacy maps are not supported by libbpf anymore and not even by the
kernel for newer types of maps like inode/task storage.

Add support of BTF maps in aya-ebpf under the `btf-maps` feature flag.

Usage of this feature requires emitting debug info for the eBPF crate
and passing the `--btf` flag to bpf-linker.

--- a/aya-ebpf-macros/Cargo.toml
+++ b/aya-ebpf-macros/Cargo.toml
@@ -24,3 +24,7 @@ syn = { workspace = true, default-features = true, features = ["full"] }
 
 [dev-dependencies]
 aya-ebpf = { path = "../ebpf/aya-ebpf", default-features = false }
+
+[features]
+btf-maps = []
+default = ["btf-maps"]
