--- a/test/integration-test/Cargo.toml
+++ b/test/integration-test/Cargo.toml
@@ -28,6 +28,7 @@ test-case = { workspace = true }
 test-log = { workspace = true, features = ["log"] }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 xdpilone = { workspace = true }
+nix = { workspace = true, features = ["process"] }
 
 [build-dependencies]
 anyhow = { workspace = true }
