--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install headers
         run: |
           sudo apt -y update
-          sudo apt -y install libelf-dev libc6-dev libc6-dev-{arm64,armel,riscv64,ppc64el,s390x}-cross
+          sudo apt -y install libelf-dev libc6-dev libc6-dev-{arm64,armel,riscv64,ppc64el,s390x,mips}-cross
 
       - name: Run codegen
         run: |
